[project]
name = "asyncio-dive"
version = "0.1.0"
description = "Refresh asyncio knowledge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-mypy>=1.0.1",
    "pytest-spec>=4.0.0",
    "pytest-watcher>=0.4.3",
]
