[project]
name = "asyncio-dive"
version = "0.1.0"
description = "Refresh asyncio knowledge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.1.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mypy>=1.0.1",
    "pytest-spec>=4.0.0",
    "pytest-watcher>=0.4.3",
]
